
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="225dp"
            android:id="@+id/imgViewLogo"
            android:text="@string/imgViewLogo"
            android:src="@drawable/petpatrollogo"
            android:contentDescription="@string/imageViewLogo"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:paddingBottom="35dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/report_button"
            android:id="@+id/buttonReport"
            android:textStyle="bold"
            android:textSize="22sp"
            android:padding="10dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/find_button"
            android:id="@+id/buttonFind"
            android:textStyle="bold"
            android:textSize="24sp"
            android:padding="10dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adopt_button"
            android:id="@+id/buttonAdopt"
            android:textStyle="bold"
            android:textSize="24sp"
            android:padding="10dp"/>

    </LinearLayout>
</RelativeLayout>
